--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/register": "7.6.2",
+    "acorn": "^7.1.1",
     "chai": "4.2.0",
     "chai-http": "4.3.0",
     "coveralls": "3.0.6",
