--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "6.4.0",
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "2.18.2",
+    "minimist": "^1.2.5",
     "mocha": "6.2.0",
     "nodemon": "1.19.3",
     "nyc": "14.1.1"
