--- a/package.json
+++ b/package.json
@@ -39,19 +39,20 @@
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-plugin-import": "2.18.2",
     "minimist": "^1.2.5",
-    "mocha": "6.2.0",
-    "nodemon": "1.19.3",
+    "mocha": "^8.1.1",
+    "nodemon": "^2.0.4",
     "nyc": "14.1.1"
   },
   "dependencies": {
+    "@babel/cli": "7.6.2",
     "@babel/core": "7.6.2",
     "@babel/node": "7.6.2",
-    "@babel/preset-env": "7.6.2",
-    "@babel/cli": "7.6.2",
     "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/preset-env": "7.6.2",
     "@babel/runtime": "7.6.2",
     "@hapi/joi": "16.1.4",
     "bcrypt": "5.0.0",
+    "dot-prop": "^5.2.0",
     "dotenv": "8.1.0",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
